overlay &  gap correction

--- a/responsive.css
+++ b/responsive.css
@@ -1,27 +1,41 @@
 /* // X-Small devices (portrait phones, less than 576px) */
-@media screen and (max-width: 575.98px) { 
+@media screen and (max-width: 575.98px) {
+
+    html,
+    body {
+        overflow-x: hidden;
+
+    }
+
     #header .left_p {
         text-align: center;
     }
+
     #header .right_links {
         display: flex;
         justify-content: center;
     }
+
     #banner .banner_content {
         text-align: center;
     }
+
     #banner .banner_content h1 {
         font-size: 30px;
     }
+
     #service .service_body {
         margin-bottom: 30px;
     }
-    .team_body{
+
+    .team_body {
         margin-bottom: 30px;
     }
+
     #testimonial .testimonial_body {
         margin-bottom: 30px;
     }
+
     footer .two {
         margin-bottom: 30px;
     }
@@ -29,34 +43,40 @@
 
 /* // Small devices (landscape phones, less than 768px) */
 @media (min-width: 576px) and (max-width: 767.98px) {
+    html,
+    body {
+        overflow-x: hidden;
+
+    }
     #service .service_body {
         margin-bottom: 30px;
     }
-    .team_body{
+
+    .team_body {
         margin-bottom: 30px;
     }
-    #footer .two{
+
+    #footer .two {
         margin-bottom: 30px;
     }
 }
 
 /* // Medium devices (tablets, less than 992px) */
-@media (min-width: 768px) and (max-width: 991.98px) { 
-    #footer .two{
+@media (min-width: 768px) and (max-width: 991.98px) {
+    html,
+    body {
+        overflow-x: hidden;
+
+    }
+    #footer .two {
         margin-bottom: 40px;
     }
 }
 
 /* // Large devices (desktops, less than 1200px) */
-@media (min-width: 992px) and (max-width: 1199.98px) {  
-    
-}
+@media (min-width: 992px) and (max-width: 1199.98px) {}
 
 /* // X-Large devices (large desktops, less than 1400px) */
-@media (min-width: 1200px) and (max-width: 1399.98px) { 
-    
-}
+@media (min-width: 1200px) and (max-width: 1399.98px) {}
 
-@media (min-width: 1400px) { 
-    
-}
+@media (min-width: 1400px) {}
